<?xml version="1.0"?>
<package>
  <name>dvrk_config</name>
  <version>2.0.0</version>
  <description>dVRK config files</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>

  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawIntuitiveResearchKit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
