<package>
  <name>saw_intuitive_research_kit_examples_deprecated</name>
  <version>1.4.0</version>
  <description>
  sawIntuitiveResearchKit Examples (deprecated)
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawIntuitiveResearchKit</url>

  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>

  <build_depend>saw_keyboard</build_depend>
  <build_depend>saw_text_to_speech</build_depend>
  <build_depend>saw_controllers</build_depend>
  <build_depend>saw_robot_io_1394</build_depend>
  <build_depend>saw_intuitive_research_kit</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>

  <run_depend>saw_keyboard</run_depend>
  <run_depend>saw_controllers</run_depend>
  <run_depend>saw_robot_io_1394</run_depend>
  <run_depend>saw_intuitive_research_kit</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
