<package>
  <name>dvrk_arms_from_ros</name>
  <version>2.2.1</version>
  <description>
  sawIntuitiveResearchKit compatible arm from ROS topics
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-dvrk/dvrk_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cisst_ros_crtk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>cisst_ros_crtk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
