<package>
  <name>saw_intuitive_research_kit_example_psm_derived</name>
  <version>2.3.0</version>
  <description>
  sawIntuitiveResearchKit Example Derived PSM with Qt widget and ROS bridge
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawIntuitiveResearchKit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>saw_intuitive_research_kit</build_depend>
  <build_depend>cisst_ros_crtk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>saw_intuitive_research_kit</run_depend>
  <run_depend>cisst_ros_crtk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
